--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,22 @@
         android:id="@+id/listFragment"
         android:name="me.aofz.tasklist.ListFragment"
         android:label="ListFragment"
-        tools:layout="@layout/list_fragment"/>
+        tools:layout="@layout/list_fragment">
+        <action
+            android:id="@+id/action_listFragment_to_detailFragment"
+            app:destination="@id/detailFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_addFragment"
+            app:destination="@id/addFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="me.aofz.tasklist.DetailFragment"
+        tools:layout="@layout/detail_fragment"
+        android:label="DetailFragment" />
+    <fragment
+        android:id="@+id/addFragment"
+        android:name="me.aofz.tasklist.AddFragment"
+        android:label="AddFragment"
+        tools:layout="@layout/add_fragment"/>
 </navigation>
