--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -25,12 +25,13 @@
             android:inputType="textMultiLine" />
 
         <Button
+            android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:backgroundTint="@color/colorAccent"
-            android:text="decide"
+            android:text="add"
             android:textColor="@color/design_default_color_surface" />
 
     </LinearLayout>
