--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:textAlignment="center"
             android:textSize="32sp"
             tools:text="Title" />
 
@@ -29,7 +28,7 @@
             tools:text="Description" />
 
         <Button
-            android:id="@+id/textButton"
+            android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
