--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -28,7 +28,7 @@
             android:inputType="textMultiLine" />
 
         <Button
-            android:id="@+id/add_button"
+            android:id="@+id/decide_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
