--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,8 +23,8 @@
         tools:layout="@layout/detail_fragment"
         android:label="DetailFragment" >
         <argument
-            android:name="position"
-            app:argType="integer" />
+            android:name="TaskContent"
+            app:argType="me.aofz.tasklist.database.Task" />
     </fragment>
     <fragment
         android:id="@+id/addFragment"
