refactor add fragment and viewmodel

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/addFragment"
-        android:name="me.aofz.tasklist.add.AddFragment"
+        android:name="me.aofz.tasklist.addtask.AddFragment"
         android:label="AddFragment"
         tools:layout="@layout/add_fragment"/>
 </navigation>
