--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
+
         <variable
-            name="viewModel"
-            type="me.aofz.tasklist.add.AddViewModel" />
+            name="viewmodel"
+            type="me.aofz.tasklist.addtask.AddViewModel" />
     </data>
 
     <LinearLayout
@@ -16,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:hint="Title" />
+            android:hint="Title"
+            android:text="@={viewmodel.title}" />
 
         <EditText
             android:id="@+id/description_edit"
@@ -25,7 +28,8 @@
             android:layout_margin="8dp"
             android:layout_weight="1"
             android:hint="Description"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:text="@={viewmodel.description}" />
 
         <Button
             android:id="@+id/decide_button"
