--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -7,7 +8,6 @@
         <variable
             name="detailViewModel"
             type="me.aofz.tasklist.ui.detail.DetailViewModel" />
-
     </data>
 
     <LinearLayout
@@ -33,14 +33,17 @@
             android:textSize="24sp"
             tools:text="Description" />
 
-        <Button
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_gravity="right"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:backgroundTint="@color/design_default_color_error"
-            android:text="@string/delete_button_text"
-            android:textColor="@color/design_default_color_surface" />
+            android:src="@drawable/ic_baseline_delete_24"
+            android:tint="@color/design_default_color_surface"
+            app:fabSize="normal" />
 
     </LinearLayout>
 </layout>
