--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/colorAccent"
             android:src="@drawable/ic_baseline_add_24"
             android:tint="@color/design_default_color_surface"
             app:fabSize="normal"
