--- a/app/src/main/res/layout/add_fragment.xml
+++ b/app/src/main/res/layout/add_fragment.xml
@@ -45,6 +45,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/colorAccent"
+            android:onClick="@{() -> viewModel.addTask()}"
             android:src="@drawable/ic_baseline_done_24"
             android:tint="@color/design_default_color_surface"
             app:fabSize="normal" />
