--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="detailViewModel"
-            type="me.aofz.tasklist.ui.detail.DetailViewModel" />
+            name="viewModel"
+            type="me.aofz.tasklist.ui.taskdetail.DetailViewModel" />
     </data>
 
     <LinearLayout
@@ -21,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:text="@{viewModel.task.title}"
             android:textSize="32sp"
             tools:text="Title" />
 
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
+            android:text="@{viewModel.task.description}"
             android:textSize="24sp"
             tools:text="Description" />
 
@@ -41,6 +43,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:backgroundTint="@color/design_default_color_error"
+            android:onClick="@{() -> viewModel.deleteTask()}"
             android:src="@drawable/ic_baseline_delete_24"
             android:tint="@color/design_default_color_surface"
             app:fabSize="normal" />
