--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="me.aofz.tasklist.ui.list.ListViewModel" />
+            type="me.aofz.tasklist.ui.tasklist.ListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
