--- a/app/src/main/res/layout/detail_fragment.xml
+++ b/app/src/main/res/layout/detail_fragment.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:layout_weight="1"
-            android:text="@{viewModel.task.description}"
+            android:text="@{viewModel.task.description.toString()}"
             android:textSize="24sp"
             tools:text="Description" />
 
