set gone descrption's View when it is no text

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,34 +10,39 @@
             type="me.aofz.tasklist.model.Task" />
     </data>
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        android:orientation="vertical">
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp">
 
-        <TextView
-            android:id="@+id/list_title_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:singleLine="true"
-            android:text="@{task.title.toString()}"
-            android:textSize="24sp"
-            tools:text="title" />
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/list_description_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:singleLine="true"
-            android:text="@{task.description.toString()}"
-            android:textColor="@color/cardview_shadow_start_color"
-            android:textSize="16sp"
-            tools:text="description" />
+            <TextView
+                android:id="@+id/list_title_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="@{task.title.toString()}"
+                android:textSize="24sp"
+                tools:text="title" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/list_description_text"
+                setVisibility="@{!task.description.toString().empty}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="@{task.description.toString()}"
+                android:textColor="@color/cardview_shadow_start_color"
+                android:textSize="16sp"
+                tools:text="description" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
